--- a/style.css
+++ b/style.css
@@ -379,10 +379,8 @@ a.btn:nth-child(2)::before{
     transition: .6s;
     z-index :-1;
 } 
-
 .social-icon a:hover::before{
     width: 100%;
-
 }
 
 .home-image{
@@ -471,7 +469,7 @@ a.btn:nth-child(2)::before{
 .info-about2,
 .info-about3{
     background: var(--bg-color);
-    font-size: .5rem;
+    font-size: 75%;
     position: absolute;
     padding: 10px;
     width: 90px;
@@ -627,18 +625,26 @@ a.btn:nth-child(2)::before{
     border-radius: 25px;
     box-shadow: var(--neon-box-shadow);
 }
-.skill-bar .bar .html{
-    width: 72%;
-    animation: html 2s;
+.skill-bar .bar .Java{
+    width: 90%;
+    animation: html 2.5s;
 }
 
 .skill-bar .bar .C{
-    width: 92%;
-    animation: C 3s;
+    width: 60%;
+    animation: C 3.5s;
 }
-.skill-bar .bar .java{
-    width: 19%;
+.skill-bar .bar .Sql{
+    width: 70%;
     animation:  java 4s;
+}
+.skill-bar .bar .Xml{
+    width: 40%;
+    animation:  java 4.5s;
+}
+.skill-bar .bar .Html{
+    width: 70%;
+    animation:  java 5s;
 }
 
 /*Skills right"""###################################################################################*/
@@ -666,7 +672,6 @@ a.btn:nth-child(2)::before{
     left: 50%;
     transform: translate(-50% , -50%);
 }
-
 .box .text small{
     display: block;
     font-weight: 600 ;
@@ -690,14 +695,10 @@ a.btn:nth-child(2)::before{
     transform: rotate(calc(var(--i)*var(--rot))) translateY(-45px);
    
 }
-
 .points.marked{
     animation: glow 0.04s linear forwards;
     animation-delay: calc(var(--i)*1.05s);
 }
-
-
-
 @keyframes glow{
     0%{
         background: var(--bg-color);
@@ -708,7 +709,6 @@ a.btn:nth-child(2)::before{
         box-shadow: var(--neon-box-shadow);
     }
 }
-
 @keyframes slideAnimation {
     0%{
        opacity: 0;
@@ -783,8 +783,8 @@ a.btn:nth-child(2)::before{
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 98%;
     opacity: 0;
     background: linear-gradient(rgba(0,0,0,.2),#12f7ff);
     display: flex;
@@ -937,12 +937,12 @@ footer a i{
 }
 
 
-@keyframes html{
+@keyframes Java{
     0%{
         width: 0%;
     }
     100%{
-        width: 72%;
+        width: 90%;
     }
 }
 @keyframes C{
@@ -950,15 +950,31 @@ footer a i{
         width: 0%;
     }
     100%{
-        width: 72%;
+        width: 60%;
     }
 }
-@keyframes java{
+@keyframes Sql{
     0%{
         width: 0%;
     }
     100%{
-        width: 72%;
+        width: 70%;
+    }
+}
+@keyframes Xml{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 40%;
+    }
+}
+@keyframes Html{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 70%;
     }
 }
 
@@ -1079,3 +1095,85 @@ footer a i{
         font-size: 1rem;
     }  
 } 
+
+
+
+
+
+
+/* *{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+  }
+  body{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    min-height:100vh;
+    background: #262433;
+  } */
+  .b-menu{
+    position:relative;
+   width:280px;
+    height:280px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+  }
+  .b-menu .toggle{
+    position:relative;
+    height:60px;
+    width:60px;
+    background:var(--hover-color);
+    border-radius:50%;
+    box-shadow:0 3px 4px rgba(0,0,0,0.15);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:#333;
+    font-size:2rem;
+    cursor:pointer;
+    transition:1.25s;
+    z-index:5;
+  }
+  .b-menu.active .toggle{
+    transform:rotate(360deg);
+    box-shadow: 0 6px 8px rgba(0,0,0,0.15),
+      0 0 0 2px #333,
+      0 0 0 8px #060505;
+  }
+  .b-menu li{
+    position:absolute;
+    left:0;
+    list-style:none;
+    transition:0.5s;
+    transform:rotate(calc(360deg/8 * var(--i)));
+    transform-origin:140px;
+    scale:0;
+    transition-delay: calc(0.05s * var(--i));
+  }
+  .b-menu.active li{
+    scale:1;
+  }
+  .b-menu li a{
+    position:relative;
+    display:flex;
+   transform:rotate(calc(360deg/-8 * var(--i)));
+    width:60px;
+    height:60px;
+    background-color :transparent;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    border-radius:50%;
+    font-size:1.75rem;
+    color:var(--clr);
+     box-shadow:0 3px 4px rgba(0,0,0,0.15);
+    transition:0.5s;
+  }
+  .b-menu li:hover a{
+    font-size:2.5rem;
+    box-shadow:0 0 0 2px var(--clr),
+      0 0 0 6px #fff;
+  }
